--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,22 @@
 body {
   margin: 0;
-  font-family: 'Forum';
+  font-family: 'Inconsolata';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  height: 100%;
 }
