--- a/src/containers/Home/Home.module.css
+++ b/src/containers/Home/Home.module.css
@@ -4,6 +4,11 @@
     margin: 0 auto;
 }
 
+h1 {
+    font-size: 1.9em;
+}
+
 .Section h3, .Section p {
     text-align: left;
+    font-size: 1.3em;
 }
