--- a/src/containers/Layout/Layout.module.css
+++ b/src/containers/Layout/Layout.module.css
@@ -2,3 +2,10 @@
     margin-top: 50px;
     height: 100%;
 }
+
+footer {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
