--- a/src/components/Navigation/SideDrawer/DrawerToggle/DrawerToggle.module.css
+++ b/src/components/Navigation/SideDrawer/DrawerToggle/DrawerToggle.module.css
@@ -15,6 +15,7 @@
     border-radius: 25px;
     height: 4px;
     background-color: rgb(94, 94, 94);
+    margin: 1px;
 }
 
 @media (min-width: 500px) {
