--- a/src/components/Project/ProjectPreview/ProjectPreview.module.css
+++ b/src/components/Project/ProjectPreview/ProjectPreview.module.css
@@ -2,6 +2,7 @@
     list-style: none;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     width: 80%;
     margin: 55px auto;
     background-color: lightgray;
@@ -22,6 +23,7 @@
 .ProjectPreview img {
     max-width: 50%;
     max-height: 300px;
+    margin: 5px;
 }
 
 .ProjectPreview div h3 {
@@ -38,4 +40,14 @@
 
 .ProjectPreview:hover {
     background-color: #aaa;
+}
+
+@media (max-width: 700px) {
+    .ProjectPreview img {
+        display: none;
+    }
+
+    .ProjectPreview div {
+        width: 90%;
+    }
 }
