--- a/src/components/Project/ProjectPreview/ProjectPreview.module.css
+++ b/src/components/Project/ProjectPreview/ProjectPreview.module.css
@@ -5,11 +5,16 @@
     align-items: center;
     width: 80%;
     margin: 55px auto;
-    background-color: lightgray;
+    background-color: rgb(241, 241, 241);
     padding: 20px;
     border-radius: 5px;
     cursor: pointer;
     font-size: 1.3em;
+    box-sizing: border-box;
+}
+
+.ProjectPreview:first-child {
+    margin-top: 0;
 }
 
 .Description {
@@ -42,9 +47,17 @@
     background-color: #aaa;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1023px) {
+    .ProjectPreview {
+        background-color: rgba(0, 0, 0, .6);
+        color: #eee;
+        position: relative;
+    }
     .ProjectPreview img {
-        display: none;
+        position: absolute;
+        z-index: -1;
+        max-width: 90%;
+        max-height: 90%;
     }
 
     .ProjectPreview div {
